@@ -1,3 +1,5 @@
+* fixed issue #121: wrong collection size reported
+
 * fixed escaping of document data in HTML admin front end
 
 * added server startup option --server.disable-admin-interface to turn off the HTML admin interface
